Prevent horizontal scrolling on body

--- a/_base.scss
+++ b/_base.scss
@@ -47,6 +47,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-feature-settings: 'kern';
   text-rendering: optimizeLegibility;
+  overflow-x: hidden;
 }
 
 //-------------------------------------
